--- a/package.json
+++ b/package.json
@@ -8,8 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "fluent-ffmpeg": "^2.1.2"
-  }
+  "license": "ISC"
 }
