--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -17,3 +17,11 @@ jobs:
       - name: package
         run: |
           npx pkg index.js -o music_importer
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          files: |
+            music_importer.exe
