--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -14,7 +14,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v2
-      - name: package
+      - name: Package
         run: |
           npx pkg index.js -o music_importer
       - uses: "marvinpinto/action-automatic-releases@latest"
