--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -24,4 +24,4 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-            music_importer.exe
+            *.exe
