--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Package
         run: |
-          npx pkg index.js -o /home/runner/work/SAF_music_importer/SAF_music_importer/music_importer -t node20-win-arm64
+          npx pkg index.js -o /home/runner/work/SAF_music_importer/SAF_music_importer/music_importer -t latest-win-arm64
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
