--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-		"build": "pkg index.js --out-path ./build/"
+		"build": "npx pkg index.js --out-path ./build/"
   },
   "keywords": [],
   "author": "",
