--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "npx pkg index.js --out-path ./build/"
+		"build": "npx pkg index.js --out-path ./build/",
+		"start": "node ."
 	},
 	"repository": "https://github.com/tonyxforce/SAF_music_importer",
 	"keywords": [],
